# secbuddy

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tools.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_loop.rs  audit.rs  context.rs  evidence.rs  governance.rs  lib.rs  llm_client.rs  main.rs  mcp_client.rs  prompts.rs  tool_registry.rs  tool_runner.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/db/migrations/: 001_init.sql  mod.rs
src/components/: ChatComposer.tsx  FindingCard.tsx  MessageList.tsx  Sidebar.tsx  StatusBar.tsx  ToolCard.tsx
src/constants/: llm.ts
src/data/: models-manifest.ts
src/lib/: tauri.ts
src/routes/: Chat.tsx  Home.tsx  Settings.tsx
src/stores/: chat.ts  modelsConfig.ts  settings.ts
